--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <title>Isochrones multimodaux @ Grenoble Alpes Métropole</title>
-        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css" />
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.1.6/zepto.js"></script>
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet-src.js"></script>
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script>
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone.js"></script>
+        <link rel="stylesheet" href="//static.daml.fr/shared/front/leaflet/0.7.7/leaflet.css" />
+        <script type="text/javascript" src="//static.daml.fr/shared/front/zepto/1.1.6/zepto.js"></script>
+        <script type="text/javascript" src="//static.daml.fr/shared/front/leaflet/0.7.7/leaflet-src.js"></script>
+        <script type="text/javascript" src="//static.daml.fr/shared/front/underscore.js/1.8.3/underscore.js"></script>
+        <script type="text/javascript" src="//static.daml.fr/shared/front/backbone.js/1.3.3/backbone.js"></script>
         <style type="text/css">
             body {
                 padding: 0;
