css: better popups

--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
                 top: 50%;
                 left: 50%;
             }
+            .leaflet-popup-content {
+                background: transparent;
+                color: #fff;
+            }
+
+            .leaflet-popup-content a {
+                color: inherit;
+            }
+
+            .leaflet-popup-content-wrapper, .leaflet-popup-tip {
+                background-color: rgba(34, 34, 34, 0.7);
+            }
         </style>
     </head>
     <body>
