--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 }
 
                 var now = new Date(),
-                    date = now.getFullYear() + "/" + ("0" + now.getMonth()).substr(-2) + "/" + ("0" + now.getDate()).substr(-2),
+                    date = now.getFullYear() + "/" + ("0" + (1 + now.getMonth())).substr(-2) + "/" + ("0" + now.getDate()).substr(-2),
                     uri = "otp_metromobilite.php?algorithm=recursiveGrid&" +
                         "fromPlace=" + pos.lat + "," + pos.lng + "&date=" + date + "&time=12:00:00&" +
                         "maxWalkDistance=1000&mode=" + mode + "&precisionMeters=200&cutoffSec=300&cutoffSec=600&" +
